# auto-g-nano

./: .gitignore  LICENSE  README.md  coreml_export.py  dataset.py  eval_hellaswag.py  finetune.py  finetune_pytorch.py  generate.py  mlx_finetune.py  mlx_model.py  mlx_train.py  model.py  publish.py  pyproject.toml  test_instruct.py  train.py  train_pytorch.py  train_test.py
